# cerberus-neuro

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: CONTEXT.md  SETUP.md
docs/superpowers/plans/: 2026-05-08-v0-phase-1-baseline-disease.md  2026-06-09-argus-cells-phase-2.md
docs/superpowers/results/: 2026-05-08-v0-phase-0.5-cell-type-result.md
docs/superpowers/specs/: 2026-05-08-v0-baseline-first-paired-experiment-design.md  2026-05-12-argus-cells-design.md
notebooks/: 00_environment_smoke.ipynb  01_data_exploration.ipynb  02_cell_type_deploy.ipynb  02_sanity_check.ipynb  02_train.ipynb  03_donor_audit.ipynb  04_phase_1_harness.ipynb  05_phase_2_train.ipynb  06_phase_3_analysis.ipynb
src/argus_cells/: audit.py  data.py  training.py
src/argus_cells/analysis/: __init__.py  agreement.py  figures.py  stratification.py
src/argus_cells/attribution/: __init__.py  attention_rollout.py  base.py  channel_ablation.py  gradcam.py  integrated_gradients.py
src/argus_cells/models/: __init__.py  cct.py
src/argus_cells/probes/: donor_probe.py
src/cerberus_neuro/: audit.py  model.py  training.py
src/cerberus_neuro/analysis/: __init__.py  stratification.py
src/cerberus_neuro/attribution/: __init__.py  attention_rollout.py  base.py
src/cerberus_neuro/probes/: __init__.py  donor_probe.py
tests/: conftest.py  test_agreement.py  test_attention_rollout.py  test_attribution_base.py  test_audit.py  test_baseline_embedding.py  test_cct.py  test_cct_tokenizer.py  test_channel_ablation.py  test_data_yield_donor.py  test_donor_probe.py  test_figures.py  test_gradcam.py  test_integrated_gradients.py  test_stratification.py  test_train_argus_cct.py
