[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerberus-neuro"
version = "0.0.15"
description = "Cerberus-inspired multi-task ResNet34 for the Broad NeuroPainting Cell Painting dataset (cell-type classification, virtual staining, disease-state classification)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Patrick J. Reed", email = "patrickjenningsreed@gmail.com" }]
keywords = ["cell-painting", "neuropainting", "multi-task-learning", "computer-vision", "cerberus", "resnet", "iPSC", "22q11.2", "virtual-staining"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "huggingface_hub>=0.24",
  "datasets>=2.20",
  "Pillow>=10.0",
  "tifffile>=2024.5",
  "imagecodecs>=2024.6",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "jupyterlab>=4.0",
]
training = [
  "torch>=2.4",
  "torchvision>=0.19",
  "pytorch-msssim>=1.0",
]

[project.urls]
Homepage = "https://github.com/PatrickJReed/cerberus-neuro"

[tool.hatch.build.targets.wheel]
packages = ["src/cerberus_neuro"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]
